Make new branch for condensed shelf and no shelf and seamount runs, 8/5/23

--- a/analysis/density_profile.ipynb
+++ b/analysis/density_profile.ipynb
@@ -7,11 +7,7 @@
    "source": [
     "## Plots of MOM6 ISOMIP \n",
     "\n",
-    "Using GFDL ISOMIP/layer configuration, with modifications in `MOM_override` (see each experiments' folder) with `ICE_SHELF = False`, `KV_ML_INVZ2` originally set to 1.e-4, `FIXED_DEPTH_LOTW_ML = True`, `LOTW_VISCOUS_ML_FLOOR = True`, and the `REGRIDDING_COORDINATE_MODE` set to different coordinates.\n",
-    "\n",
-    "In order for `ICE_SHELF = False` to work also needed to set `#override TRIM_IC_FOR_P_SURF = False` otherwise initialisation of layers still thought there was an ice shelf and a tsunami was generated.\n",
-    "\n",
-    "Tried different parameters to see what difference was between last year's tests and current ones. Also tried different stratifications."
+    "Trying to plot density profile resultant"
    ]
   },
   {
